k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitartortona-api
  labels:
    environment: staging
spec:
  template:
    metadata:
      labels:
        environment: staging
    spec:
      containers:
      - name: api
